[package]
name = "ckbez"
version = "1.0.0"
edition = "2024"
description = "CKB Easy is an experimental project that aims to provide human-friendly interfaces for common CKB operations."
license = "MIT"

[dependencies]
ckb-chain-spec = "1.0"
ckb-error = "1.0"
ckb-hash = "1.0"
ckb-script = "1.0"
ckb-traits = "1.0"
ckb-types = "1.0"
hex = "0.4"
